utils/iptables_reset.txt
# Generated by iptables-save v1.8.4 on Tue Oct 22 21:44:28 2024
*mangle
:PREROUTING ACCEPT [229:55172]
:INPUT ACCEPT [229:55172]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [193:31500]
:POSTROUTING ACCEPT [193:31500]
-A POSTROUTING -o lxcbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Oct 22 21:44:28 2024
# Generated by iptables-save v1.8.4 on Tue Oct 22 21:44:28 2024
*nat
:PREROUTING ACCEPT [2:373]
:INPUT ACCEPT [2:373]
:OUTPUT ACCEPT [24:1714]
:POSTROUTING ACCEPT [23:1674]
-A POSTROUTING -s 10.0.3.0/24 ! -d 10.0.3.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Oct 22 21:44:28 2024
# Generated by iptables-save v1.8.4 on Tue Oct 22 21:44:28 2024
*filter
:INPUT ACCEPT [229:55172]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [203:32532]
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 67 -j ACCEPT
-A FORWARD -o lxcbr0 -j ACCEPT
-A FORWARD -i lxcbr0 -j ACCEPT
COMMIT
# Completed on Tue Oct 22 21:44:28 2024
